# AudioOptimize

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
AudioOptimize/: CMakeLists.txt
AudioOptimize/integration-tests/: AudioOptimize_performance.cpp  CMakeLists.txt
AudioOptimize/src/: AudioOptimizeEditor.h  AudioOptimizeProcessor.cpp  AudioOptimizeProcessor.h  KindOfADelay.h
AudioOptimize/testbed/: schwarz-testbed.cpp
dsp-code/: AudioProcessing.h  BeatsList.h  Biquad.h  BiquadEqualizer.h  BufferInterpolation.h  CrossFader.h  DiffusorDelayChain.h  DigitalDelay.h  FourStageFilter.h  Modulation.h  MusicAndNumbers.h  OnePoleFilter.h  TwoLatticeAllPass.h  ZeroCrossings.h
dsp-code/documentation/: Biquad_documentation.cpp  CMakeLists.txt  GenerateGnuPlot.h  README.md
dsp-code/godbolt/: DelayWrapping.h
dsp-code/unit-tests/: BeatsList_test.cpp  BiquadEqualizer_test.cpp  Biquad_test.cpp  BufferInterpolation_test.cpp  CMakeLists.txt  CrossFader_test.cpp  DigitalDelay_test.cpp  FourStageFilter_test.cpp  Modulation_test.cpp  MusicAndNumbers_test.cpp  OnePoleFilter_test.cpp  TwoLatticeAllPass_test.cpp
dsp-code/unit-tests/performance/: BiquadPerformance_test.cpp  BufferInterpolationPerformance_test.cpp  CrossFaderPerformance_test.cpp  DigitalDelayPerformance_test.cpp  DspPerformance.h  FourStageFilterPerformance_test.cpp  ModulationPerformance_test.cpp  OnePoleFilterPerformance_test.cpp  PerformanceTest_test.cpp  README.md  TwoLatticeAllPassPerformance_test.cpp
